--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 </head>
+ 
 <body>
 
+<py-script>
+    print("hello world");
+</py-script>
+<!-- 
+
+<h3>Testing <label id='name'></label></h3>
+
+<py-script>
+    name = "PyScript";
+    pyscript.write("name", name)
+</py-script>
+
+-->
 </body>
 </html>
