--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+
 </head>
- 
+ <py-env>
+        - requests
+        - beautifulsoup4
+        - paths:
+            - /main.py
+</py-env>
 <body>
 
-<py-script>
-    print("hello world");
-</py-script>
-<!-- 
-
-<h3>Testing <label id='name'></label></h3>
-
-<py-script>
-    name = "PyScript";
-    pyscript.write("name", name)
-</py-script>
-
--->
+    <py-script>
+        from requests import *
+        from bs4 import BeautifulSoup
+    </py-script>
 </body>
 </html>
