--- a/index.html
+++ b/index.html
@@ -10,17 +10,10 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 
 </head>
- <py-env>
-        - requests
-        - beautifulsoup4
-        - paths:
-            - /main.py
+ <py-env> 
 </py-env>
 <body>
 
-    <py-script>
-        from requests import *
-        from bs4 import BeautifulSoup
-    </py-script>
+    <py-repl id="my-repl" auto-generate=true> </py-repl>
 </body>
 </html>
