--- a/index.html
+++ b/index.html
@@ -7,24 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.22.1/full/pyodide.js"></script>
 </head>
-<py-env>
-    - numpy
-    - matplotlib
-</py-env>
+ 
 <body>
 
-    <py-script>
-        import matplotlib.pyplot as plt
-        import numpy as np
-    
-        x_coordinates = np.random.randn(100)
-        y_coordinates = np.random.randn(100)
-        figure, axis = plt.subplots()
-        axis.scatter(x_coordinates ,y_coordinates)
-        figure
-    </py-script>
+    <script type="text/javascript">
+        async function main(){
+          let pyodide = await loadPyodide();
+          console.log(pyodide.runPython("1 + 2"));
+        }
+        main();
+      </script>
 </body>
 </html>
