--- a/index.html
+++ b/index.html
@@ -1,26 +1,53 @@
-<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css"/>
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-</head>
- <py-env>
-        - requests
-        - beautifulsoup4
-        - paths:
-            - /main.py
-</py-env>
-<body>
+    <title>GET, POST, PUT, DELETE example</title>
 
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+
+    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    <py-config>
+      [[fetch]]
+      files = ["/request.py"]
+    </py-config>
+  </head>
+
+  <body><p>
+    Hello world request example! <br>
+    Here is the output of your request:
+    </p>
     <py-script>
-        from requests import *
-        from bs4 import BeautifulSoup
+        import asyncio
+        import json
+        from request import request  # import our request function.
+
+        async def main():
+            baseurl = "http://localhost:4200/data.json"
+
+            # GET
+            headers = {"Content-type": "application/json", 'Access-Control-Allow-Origin': '*'}
+            response = await request(f"{baseurl}", method="GET", headers=headers)
+            print(f"GET request=> status:{response.status}, json:{await response.json()}")
+
+           
+
+        asyncio.ensure_future(main())
     </py-script>
-</body>
+
+    <div>
+    <p>
+        You can also use other methods. See fetch documentation: <br>
+        https://developer.mozilla.org/en-US/docs/Web/API/fetch#parameters
+    </p>
+    </div>
+    <div>
+        <p>
+        See pyodide documentation for what to do with a FetchResponse object: <br>
+        https://pyodide.org/en/stable/usage/api/python-api.html#pyodide.http.FetchResponse
+        </p>
+    </div>
+  </body>
 </html>
